--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Patricia Ngo's DMA Portfolio</title>
+    <title>Pattistry</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
   </head>
  <link rel="icon" type="image/png" href="img/verytinybee.png">
@@ -18,7 +18,7 @@
           <a href="3dobject.html">3D Design</a>
           </div>
       </div>
-      <img src="img/name.png" width="620vw" height="500vh">
+      <img src="img/name.png" height="auto" width="auto" max-width="100%">
     </div>
     <!-- END header -->
     <!-- START content -->
