update index.html and css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="3dobject.html">3D Design</a>
           </div>
       </div>
-      <img src="img/name.png" height="auto" width="auto" max-width="100%" margin-top="100px">
+      <img src="img/name.png">
     </div>
     <!-- END header -->
     <!-- START content -->
