--- a/3dobject.html
+++ b/3dobject.html
@@ -11,18 +11,26 @@
     <!--START Header-->
     <div class="altheader">
       <a href="index.html"><img src="img/home.png" style="width:60px;height:60px;margin:30px;"></a>
-      <div class="dropdown">
-        <button class="dropbtn">MENU</button>
-          <div class="dropdown-content">
-          <a href="images.html">Graphic Design</a>
-          <a href="video.html">Video</a>
-          </div>
-      </div>
-      <div class="logo">
-        <a href="index.html"><img src="img/3dobjects.png"style="height:120px;"></a>
-      </div>
+        <div class="logo">
+          <a href="index.html">
+          <img src="img/3dobjects.png" style="height:120px;left:-20px;"> </a>
+        </div>
     </div>
+  </div>
     <!-- END Header-->
+    <!-- start nav bar -->
+    <div class="chee">
+      <nav>
+        <ul>
+          <li><a href="images.html">Graphic Design</a></li>
+          <li><a href="video.html">Videos</a></li>
+          <li><a href="3dobject.html">3D Modeling</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- end nav bar -->
     <div class="contentv">
       <!-- <div class="frame">
         <div class="video">
@@ -39,7 +47,7 @@
         <div class="video">
         <h1>Sammy Spartan</h1>
           <div class="sketchfab-embed-wrapper">
-        <iframe class="container-iframe" title="A 3D model" width="90%" height="480" src="https://sketchfab.com/models/c4fa438a154e46b4b5b1a42c6d12fca7/embed"></iframe>
+        <iframe class="container-iframe" title="A 3D model" width="70%" height="480" src="https://sketchfab.com/models/c4fa438a154e46b4b5b1a42c6d12fca7/embed"></iframe>
         </div>
         </div>
         <div class="container">
