--- a/images.html
+++ b/images.html
@@ -9,21 +9,28 @@
  <link rel="icon" type="image/png" href="img/verytinybee.png">
   <body>
     <!--START Header-->
-    <div class="altheader">
-      <a href="index.html"><img src="img/home.png" style="width:60px;height:60px;margin:30px;"></a>
-      <div class="dropdown">
-        <button class="dropbtn">MENU</button>
-          <div class="dropdown-content">
-          <a href="video.html">Video</a>
-          <a href="3dobject.html">3D Design</a>
+      <div class="altheader">
+        <a href="index.html"><img src="img/home.png" style="width:60px;height:60px;margin:30px;"></a>
+          <div class="logo">
+            <a href="index.html">
+            <img src="img/images.png" style="height:120px;"> </a>
           </div>
-      </div>
-      <div class="logo">
-        <a href="index.html">
-        <img src="img/images.png" style="height:120px;"> </a>
       </div>
     </div>
     <!-- END Header-->
+<div class="chee">
+  <nav>
+    <ul>
+      <li><a href="images.html">Graphic Design</a></li>
+      <li><a href="video.html">Videos</a></li>
+      <li><a href="3dobject.html">3D Modeling</a></li>
+      <li><a href="games.html">Games</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</div>
+
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
       <div class="text">
         <h2>Click on photos for more information</h2>
       </div>
