--- a/video.html
+++ b/video.html
@@ -9,20 +9,36 @@
     <!--START Header-->
     <div class="altheader">
       <a href="index.html"><img src="img/home.png" style="width:60px;height:60px;margin:30px;"></a>
-      <div class="dropdown">
-        <button class="dropbtn">MENU</button>
-          <div class="dropdown-content">
-          <a href="images.html">Graphic Design</a>
-          <a href="3dobject.html">3D Design</a>
-          </div>
-      </div>
-      <div class="logo">
-        <img src="img/video.png"style="height:120px;">
-      </div>
-
+        <div class="logo">
+          <a href="index.html">
+          <img src="img/video.png" style="height:120px;"> </a>
+        </div>
     </div>
+  </div>
     <!-- END Header-->
+    <div class="chee">
+      <nav>
+        <ul>
+          <li><a href="images.html">Graphic Design</a></li>
+          <li><a href="video.html">Videos</a></li>
+          <li><a href="3dobject.html">3D Modeling</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+      </nav>
+    </div>
     <section class="contentv">
+      <div class="frame">
+        <div class="video">
+          <h1> Animal Crossing IRL </h1>
+          <iframe src="https://www.youtube.com/embed/KoTOCghV9Sw" width="80%" height="500px" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="container">
+          <p>This video is a representation of how many people are currently living their lives vicariously through their Animal Crossing character. Animal Crossing has helped many people of various ages cope with being in quarantine. This game helps people feel like they are achieving something by doing small everyday tasks. I wanted to show the values of being out in nature and growing bonds with friends. I hope my video brings a smile to someone's face. </p>
+        </div>
+    </div>
+
       <div class="frame">
         <div class="video">
           <h1> The Artist </h1>
@@ -33,15 +49,6 @@
         </div>
       </div>
 
-      <div class="frame">
-        <div class="video">
-          <h1> Animal Crossing IRL </h1>
-          <iframe src="https://www.youtube.com/embed/KoTOCghV9Sw" width="80%" height="500px" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="container">
-          <p>This video is a representation of how many people are currently living their lives vicariously through their Animal Crossing character. Animal Crossing has helped many people of various ages cope with being in quarantine. This game helps people feel like they are achieving something by doing small everyday tasks. I wanted to show the values of being out in nature and growing bonds with friends. I hope my video brings a smile to someone's face. </p>
-        </div>
-    </div>
     <div class="frame">
       <div class="video">
         <h1> 4 Seasons </h1>
