--- a/index.html
+++ b/index.html
@@ -10,37 +10,35 @@
   <body>
     <!-- START header -->
     <div class="header">
-      <div class="dropdown">
-        <button class="dropbtn">MENU</button>
-          <div class="dropdown-content">
-          <a href="images.html">Graphic Design</a>
-          <a href="video.html">Video</a>
-          <a href="3dobject.html">3D Design</a>
-          </div>
-      </div>
       <img src="img/name.png">
     </div>
     <!-- END header -->
+    <!-- start nav bar -->
+    <div class="chee">
+      <nav>
+        <ul>
+          <li><a href="images.html">Graphic Design</a></li>
+          <li><a href="video.html">Videos</a></li>
+          <li><a href="3dobject.html">3D Modeling</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <!-- end nav bar -->
     <!-- START content -->
     <section class="content">
     <div class="frame">
-      <h2>Artist Statement</h2>
-
-        <p>
-        My name is Patty and I am a digital media artist that creates whimsical, eye-catching artwork that includes themes of nature. The concepts for my artwork are very broad and imaginative. I want to give the viewer the experience of stepping into a whole new world. I would describe my art as dystopian surrealism. I mainly work in graphic design, but I have many years of experience working with illustration, video art, animation, and 3D modeling.
-        </p>
-
-        <p>
-        Creating art has always been something that was important to me. I began taking art courses in 2012 when I was given the opportunity to work on my middle school’s yearbook. I wasn’t until high school when I realized that art was my one main passion. I enrolled in a media arts program within my school called Media Communications Academy. Being in this academy pushed me to constantly try out new techniques. I learned that anything I want to create is achievable as long as I had the drive to complete the task. In September 2017 became the president of this academy and my goal was to inspire other students to consider making media arts their passion. I had such a good experience learning about media art and I wanted to take all the valuable knowledge I gained and expand on what I could create. I prefer to challenge myself to try new things in my art so no idea will ever be too difficult for me. I would rather do something that is out of my comfort zone as this allows me to constantly grow as an artist. This is why I chose to pursue media art after high school.
-        </p>
-
-        <p>
-        I chose the Digital Media Arts program at San Jose State because of the great reviews I heard from some alumni. I heard many positive remarks about the faculty and resources available. I have been a student of the art department for two years now and I highly appreciate the neverending support from the faculty. The people in the art community are my main motivation for continuing to do art. After I receive my bachelor’s degree, I would like to either work in UX/UI design or pursue higher education in order to become a media arts teacher. Regardless of what career I have, I want to use my skills to help other people.
-        </p>
-
-        <p>
-        My portfolio shows the artwork that I believe shows a broad range of my skills. I tried something new in each project, whether that be a different style, medium, or subject matter. This website was a really important learning experience for me because I did not have much coding experience prior to building the site. I wanted to take on the task of designing a website that I would be proud of showing off without using any templates. My goal was to fully understand the fundamentals of coding so I can apply them to future projects. I hope you enjoy browsing through my site. I added a little bee friend to keep you company.
-        </p>
+      <img src="img/header.png" style="margin-left:auto;margin-right:auto;display:block;">
+      <h2 style="color:white;font-weight:bold;">Artist Statement</h2>
+      <p>
+      My name is Patty and I am an artist hat creates whimsical, eye-catching artwork that includes themes of nature. The concepts for my artwork are very broad and imaginative. I want to give the viewer the experience of stepping into a whole new world. I would describe my art as dystopian surrealism. </p>
+      <p>
+      Creating art has always been something that was important to me. I began taking art courses in 2012 when I was given the opportunity to work on my middle school’s yearbook. I wasn’t until high school when I realized that art was my one main passion. I enrolled in a media arts program within my school called Media Communications Academy. Being in this academy pushed me to constantly try out new techniques. I learned that anything I want to create is achievable as long as I had the drive to complete the task. In September 2017, I became the president of this academy and my goal was to inspire other students to gain a passion for media arts. I had such a good experience learning about media art so I wanted to take all the valuable knowledge I gained and expand the horizons of what I could create. </p>
+      <p>
+      After looking over my options, I decided to continue my artist journey at the San Jose State University Digital Media Arts BFA program. I have been a student of the art department for three years now and I highly appreciate the never ending support from the faculty. After I receive my bachelor’s degree, I would like to work alongside fellow media artist and possibly pursue a higher education in order to become a media arts teacher. I want to use my skills to help other people. </p>
+      <p>
+      My portfolio shows the artwork that I believe shows a broad range of my skills. I tried something new in each project, whether that be a different style, medium, or subject matter. This website was a really important learning experience for me because I did not have much coding experience prior to building the site. I wanted to take on the task of designing a website that I would be proud of showing off without using any templates. My goal was to fully understand the fundamentals of coding so I can apply them to future projects. I hope you enjoy browsing through my site. I added a little bee friend to keep you company. </p>
       </div>
     </section>
   <!-- END content -->
