--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <!-- end nav bar -->
     <!-- START content -->
-    <section class="content">
+    <section class="contentv">
     <div class="frame">
       <img src="img/header.png" style="margin-left:auto;margin-right:auto;display:block;">
       <h2 style="color:white;font-weight:bold;">Artist Statement</h2>
