--- a/3dobject.html
+++ b/3dobject.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
     <!-- end nav bar -->
-    <div class="contentv">
+    <section class="contentv">
       <!-- <div class="frame">
         <div class="video">
         <h1>Fun House</h1>
@@ -59,7 +59,7 @@
             <iframe width="70%" height="400px" src="https://www.youtube.com/embed/UTZVQeO-YRw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
-    </div>
+    </section>
 
     <div class="pointer"></div>
     <script
