Update photos and descriptions

--- a/images.html
+++ b/images.html
@@ -43,6 +43,9 @@
                     <li><a href="#img_4"><img src="img/4.jpg"></a></li>
                     <li><a href="#img_5"><img src="img/5.gif"></a></li>
                     <li><a href="#img_6"><img src="img/6.jpg"></a></li>
+                    <li><a href="#img_7"><img src="img/7.JPG"></a></li>
+                    <li><a href="#img_8"><img src="img/8.jpg"></a></li>
+                    <li><a href="#img_9"><img src="img/9.JPG"></a></li>
                 </ul>
           <div class="viewpic">
                 <a href="#_1" class="lightbox trans" id="img_1"><img src="img/i1.jpg" style="margin-left:15%;">
@@ -79,6 +82,24 @@
                   <div class="caption15">
                     <h2>About the image </h2><br>
                       <h4>Title: City Sips Tonight<br>Medium: Photography, Digital Art<br>Dimensions: 4129×5163<br>One of my favorite styles of photography is double exposure. I loved double exposure so much that I ended up making my entire Scholastic art portfolio full of double exposure images. This image was by far my favorite artpiece that I created for that set of photos. The boy in the picture is my friend Allen, who I would always go out on spontaneous trips to the city with to go get boba. Allen is an adventurer as well as a huge foodie, so this image captures all his best qualities. This image received a Siver Key from the Scholastic Art and Writing Awards.</h4>
+                  </div>
+                </a>
+                <a href="#_7" class="lightbox trans" id="img_7"><img src="img/i7.JPG" style="margin-left:15%;">
+                  <div class="caption15">
+                    <h2>About the image </h2><br>
+                      <h4>Title: Last Cup of Tea<br>Medium: Digital Illustration<br>Dimensions: 2400x3600<br>This is a self reflection pice that represents my internal struggle lately. In the image, you can see a girl slowly drowning in a cup of boba. She is facing her impending fate, however, she is fulling accepting the outcome. There have been occasions lately where I felt like I have been drowning in work. Dispite this, I have learned to accept that this is life and it cannot be helped. </h4>
+                  </div>
+                </a>
+                <a href="#_8" class="lightbox trans" id="img_8"><img src="img/i8.jpg" style="margin-left:15%;">
+                  <div class="caption15">
+                    <h2>About the image </h2><br>
+                      <h4>Title: Young Girl Drawing<br>Medium: Digital Illustration<br>Dimensions: 1367×1822<br>I have always loved the classic styles that I learned about in art history class. However, these beautiful art pieces always feature caucasian subjects, which is understandable. I wanted to see what it would look like to have a Southeast Asian woman painted in the style of one of these classic Europrean art movements. I chose Fragonard's Young Girl Reading as my reference, which was a popular artwork during the Rococo period. </h4>
+                  </div>
+                </a>
+                <a href="#_9" class="lightbox trans" id="img_9"><img src="img/i9.jpg" style="margin-left:15%;">
+                  <div class="caption15">
+                    <h2>About the image </h2><br>
+                      <h4>Title: Ann's Friend<br>Medium: Digital Illustration<br>Dimensions: 2000×2227<br>This is a drawing I did of one of my close friends, Ann. During the time that I have known her, she has always had this unconditional love for capybaras. I wanted to caputire this unconditional love in an artwork. This piece is so special to me becuase prior to creating it, I have been feeling insecure about my abilities as a digital illustratior. This artwork caused me to learn that it was not my abilities that was causing me setbacks, it was simply the drawing program that I had been using before. </h4>
                   </div>
                 </a>
          </div>
