change jpg to JPG

--- a/images.html
+++ b/images.html
@@ -96,7 +96,7 @@
                       <h4>Title: Young Girl Drawing<br>Medium: Digital Illustration<br>Dimensions: 1367×1822<br>I have always loved the classic styles that I learned about in art history class. However, these beautiful art pieces always feature caucasian subjects, which is understandable. I wanted to see what it would look like to have a Southeast Asian woman painted in the style of one of these classic Europrean art movements. I chose Fragonard's Young Girl Reading as my reference, which was a popular artwork during the Rococo period. </h4>
                   </div>
                 </a>
-                <a href="#_9" class="lightbox trans" id="img_9"><img src="img/i9.jpg" style="margin-left:15%;">
+                <a href="#_9" class="lightbox trans" id="img_9"><img src="img/i9.JPG" style="margin-left:15%;">
                   <div class="caption15">
                     <h2>About the image </h2><br>
                       <h4>Title: Ann's Friend<br>Medium: Digital Illustration<br>Dimensions: 2000×2227<br>This is a drawing I did of one of my close friends, Ann. During the time that I have known her, she has always had this unconditional love for capybaras. I wanted to caputire this unconditional love in an artwork. This piece is so special to me becuase prior to creating it, I have been feeling insecure about my abilities as a digital illustratior. This artwork caused me to learn that it was not my abilities that was causing me setbacks, it was simply the drawing program that I had been using before. </h4>
