--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="img/header.png" style="margin-left:auto;margin-right:auto;display:block;">
       <h2 style="color:white;font-weight:bold;">Artist Statement</h2>
       <p>
-      My name is Patty and I am an artist hat creates whimsical, eye-catching artwork that includes themes of nature. The concepts for my artwork are very broad and imaginative. I want to give the viewer the experience of stepping into a whole new world. I would describe my art as dystopian surrealism. </p>
+      My name is Patty and I am an artist that creates whimsical, eye-catching artwork that includes themes of nature. The concepts for my artwork are very broad and imaginative. I want to give the viewer the experience of stepping into a whole new world. I would describe my art as dystopian surrealism. </p>
       <p>
       Creating art has always been something that was important to me. I began taking art courses in 2012 when I was given the opportunity to work on my middle school’s yearbook. I wasn’t until high school when I realized that art was my one main passion. I enrolled in a media arts program within my school called Media Communications Academy. Being in this academy pushed me to constantly try out new techniques. I learned that anything I want to create is achievable as long as I had the drive to complete the task. In September 2017, I became the president of this academy and my goal was to inspire other students to gain a passion for media arts. I had such a good experience learning about media art so I wanted to take all the valuable knowledge I gained and expand the horizons of what I could create. </p>
       <p>
