--- a/games.html
+++ b/games.html
@@ -19,11 +19,10 @@
     <div class="chee">
       <nav>
         <ul>
+          <li><a href="index.html">Artist Statement</a></li>
           <li><a href="images.html">Graphic Design</a></li>
           <li><a href="video.html">Videos</a></li>
-          <li><a href="3dobject.html">3D Modeling</a></li>
           <li><a href="games.html">Games</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +44,7 @@
         <h1> Splash </h1>
          <a href="https://pattyngo.github.io/ART-101-P4-Final/index.html"><img src="img/fish.png" style="width:75%;height:auto;"></a>
         <div class="container">
-          <p>Splash is my first solo video game project. The goal of this project was to recreate the exerience of taking care of a pet fish without the risk that comes with having a live animal. This inerface includes multiple scenes show your pet fish doing different actions. These animations were creatind using JavaScript. I was able to experience taking on the role of a programmer and artist in a single project. </p>
+          <p><a href="https://pattyngo.github.io/ART-101-P4-Final/index.html">Splash</a> is my first solo video game project. The goal of this project was to recreate the exerience of taking care of a pet fish without the risk that comes with having a live animal. This inerface includes multiple scenes show your pet fish doing different actions. These animations were creatind using JavaScript. I was able to experience taking on the role of a programmer and artist in a single project. </p>
         </div>
       </div>
     </div>
