--- a/images.html
+++ b/images.html
@@ -21,11 +21,10 @@
 <div class="chee">
   <nav>
     <ul>
+      <li><a href="index.html">Artist Statement</a></li>
       <li><a href="images.html">Graphic Design</a></li>
       <li><a href="video.html">Videos</a></li>
-      <li><a href="3dobject.html">3D Modeling</a></li>
       <li><a href="games.html">Games</a></li>
-      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </div>
@@ -51,13 +50,13 @@
                 <a href="#_1" class="lightbox trans" id="img_1"><img src="img/i1.jpg" style="margin-left:15%;">
               <div class="caption15">
                 <h2>About the image </h2><br>
-                  <h4>Title: Inner Garden <br>Medium: Digital Art<br>Dimensions: 897×1121<br>An assignment I had in ART 3 prompted us to create a self-portrait using a collage of images that best represent us.  I chose to use various images of flowers since plants bring me the most joy and I was able to get a broad range of hues and textures using these patterns. I archived this image by breaking down my original self-portrait into highlights, mid-tones, and shadows. I used these groups of colors to create masks that would allow me to layer on each image in specific shapes that would create my face. This whole project was very experimental and challenged me to come up with my own methods></h4>
+                  <h4>Title: Inner Garden <br>Medium: Digital Art<br>Dimensions: 897×1121<br>Inner Garden is a self portrait that shows me inside and out. I wanted to capture my connection to the natural world. Plants are something that I feel the need to care for. The various hues and textures in this work represent my range of emotions. The white outlines are used to contrast the erratic natural patterns and balance out perfection and imperfection. </h4>
               </div>
             </a>
                 <a href="#_2" class="lightbox trans" id="img_2"><img src="img/2.jpg" style="margin-left:15%;">
               <div class="caption10">
                 <h2>About the image </h2><br>
-                  <h4>Title: Through the City<br><br>Medium: Photography, Digital Art<br>Dimensions: 750x750<br>The theme of my AP art portfolio was to distort photos using geometry. I created a series of images that used shapes to change the way each photo was interpreted. This was one of mys tronger pieces since the lines lead the eye around the image. The black and white image in the back has a range of tones and textures and I tried to complement that with the pop of color. When I use photography in my artwork, I try to have as much contrast as possible to have a dramatic effect. </h4>
+                  <h4>Title: Through the City<br><br>Medium: Photography, Digital Art<br>Dimensions: 750x750<br>This photo is part of a series of images that represent my roots. For this artwork, I wanted to capture the hidden beauty of the Bay Area what makes me proud to be born and raised here. I combined multiple images of reconzinable buildings seen around San Francisco. The background photo captures both the St. Patrick Church as well as a commerical building, which represents the co existence of old and new within the Bay Area.</h4>
               </div>
             </a>
                 <a href="#_3" class="lightbox trans" id="img_3"><img src="img/i3.jpg" style="margin-left:15%;">
@@ -69,7 +68,7 @@
                 <a href="#_4" class="lightbox trans" id="img_4"><img src="img/i4.jpg" style="margin-left:5%;">
                 <div class="caption10">
                   <h2>About the image </h2><br>
-                    <h4>Title: Clean Beach Initiative<br>Medium: Digital Art<br>Dimensions: 1200x900<br>In ART 2, we were tasked to create an art piece that would be used as a PSA. Since environmental conservation is an important topic for me, I wanted to advocate for keeping our beaches clean. I made this illustration of what our beaches are looking like now compared to what they could look like if everyone cleaned up after ourselves. My intention is to have this image posted on signs all around some beaches as a visual reminder for people to pick up their trash. The phrase “Initiating a cleaner world” is the motto of the Clean Beach Initiative which is an organization that focuses on doing beach cleanups. </h4>
+                    <h4>Title: Clean Beach Initiative<br>Medium: Digital Art<br>Dimensions: 1200x900<br>This image was created to be used as a PSA. Since environmental conservation is an important topic for me, I wanted to advocate for keeping our beaches clean. I made this illustration of what our beaches are looking like now compared to what they could look like if everyone cleaned up after ourselves. My intention is to have this image posted on signs all around some beaches as a visual reminder for people to pick up their trash. The phrase “Initiating a cleaner world” is the motto of the Clean Beach Initiative which is an organization that focuses on doing beach cleanups. </h4>
                 </div>
               </a>
                 <a href="#_5" class="lightbox trans" id="img_5"><img src="img/5.gif" style="margin-left:15%;">
