--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <div class="chee">
       <nav>
         <ul>
+          <li><a href="index.html">Artist Statement</a></li>
           <li><a href="images.html">Graphic Design</a></li>
           <li><a href="video.html">Videos</a></li>
-          <li><a href="3dobject.html">3D Modeling</a></li>
           <li><a href="games.html">Games</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -38,7 +37,10 @@
       <p>
       After looking over my options, I decided to continue my artist journey at the San Jose State University Digital Media Arts BFA program. I have been a student of the art department for three years now and I highly appreciate the never ending support from the faculty. After I receive my bachelor’s degree, I would like to work alongside fellow media artist and possibly pursue a higher education in order to become a media arts teacher. I want to use my skills to help other people. </p>
       <p>
-      My portfolio shows the artwork that I believe shows a broad range of my skills. I tried something new in each project, whether that be a different style, medium, or subject matter. This website was a really important learning experience for me because I did not have much coding experience prior to building the site. I wanted to take on the task of designing a website that I would be proud of showing off without using any templates. My goal was to fully understand the fundamentals of coding so I can apply them to future projects. I hope you enjoy browsing through my site. I added a little bee friend to keep you company. </p>
+      My portfolio shows the artwork that I believe shows a broad range of my skills. I tried something new in each project, whether that be a different style, medium, or subject matter. This website was a really important learning experience for me because I did not have much coding experience prior to building the site. I wanted to take on the task of designing a website that I would be proud of showing off without using any templates. My goal was to fully understand the fundamentals of coding so I can apply them to future projects. I hope you enjoy browsing through my site. I added a little bee friend to keep you company. </p> <br> <br>
+      <h2 style="color:white;font-weight:bold;">Let's Get in Touch!</h2>
+      <h3>Email me at patriciahngo@gmail.com</h3>
+      <h3>Instagram: <a href="instagram.com/pattistry">@Pattistry</a></h3>
       </div>
     </section>
   <!-- END content -->
