--- a/video.html
+++ b/video.html
@@ -19,13 +19,11 @@
     <div class="chee">
       <nav>
         <ul>
+          <li><a href="index.html">Artist Statement</a></li>
           <li><a href="images.html">Graphic Design</a></li>
           <li><a href="video.html">Videos</a></li>
-          <li><a href="3dobject.html">3D Modeling</a></li>
           <li><a href="games.html">Games</a></li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
-
       </nav>
     </div>
     <section class="contentv">
