--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- START content -->
     <section class="content">
     <div class="frame">
-      <img src="img/header.png" style="margin-left:auto;margin-right:auto;display:block;">
+<!--       <img src="img/header.png" style="margin-left:auto;margin-right:auto;display:block;"> -->
       <h2 style="color:white;font-weight:bold;">Artist Statement</h2>
       <p>
       Hi, I’m Patty Ngo <br>
