Update instagram link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       Since earning my BFA degree in Spring 2022, I have been dedicating myself to crafting a portfolio that truly embodies my unique artistic style. As you explore my work, I hope you will find pieces that captivate you and leave a lasting impression. I eagerly anticipate the opportunity for future collaborations, as I continue to push the boundaries of my creativity. Thank you for your interest, and I hope you thoroughly enjoy your journey through my artistic endeavors. </p> <br> <br>
       <h2 style="color:white;font-weight:bold;">Let's Get in Touch!</h2>
       <h3>Email me at patriciahngo@gmail.com</h3>
-      <h3>Instagram: <a href="instagram.com/pattistry">@Pattistry</a></h3>
+      <h3>Instagram: <a href="https://instagram.com/pattistry">@Pattistry</a></h3>
       </div>
     </section>
   <!-- END content -->
